# dc43

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  _backlog.md  _release_plan.json  conftest.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  setup.py  tsconfig.json
docs/: README.md  architecture.md  aws-ecr-setup.md  collibra-contract-integration.md  component-contract-drafter.md  component-contract-store.md  component-data-quality-engine.md  component-data-quality-governance.md  component-data-quality-manager.md  component-integration-layer.md  component-package-dependencies.md  component-package-dependencies.mmd  component-write-violation-strategies.md  configuration-reference.md  contract-management-options.md  data-quality-component.md  demo-pipeline-scenarios.md  infrastructure-and-adapters.md  release-versioning.md  retail_demo.md  service-backends-configuration.md
examples/: declare_with_governance_databricks.py
scripts/: _packages.py  generate_governance_demo_data.py  generate_release_notes.py  release.py  start_contracts_app.py  test_all.sh  test_pypi_versions.py  wait_for_internal_deps.py
temp-ingored/: collibra-dgc-core-2.0-rest.json  collibra-dgc-search-2.0-rest.json
tests/: conftest.py  test_collibra_integration.py  test_configuration_docs_sync.py  test_contract_drafter.py  test_contracts_app_config.py  test_data_quality_models.py  test_integration.py  test_odps.py  test_pipeline.py  test_portal_app.py  test_server_pages.py  test_spark_io_helpers.py  test_streaming_demo.py  test_test_pypi_versions.py  (+2 more)
(+278 files in other folders)
