[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dc43"
version = "0.1.0"
description = "Data contracts for Databricks using ODCS (Bitol) v3.0.2, with Spark/DLT helpers"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Andy Petrella" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "packaging>=21.0",
  "open-data-contract-standard==3.0.2",
]

[project.optional-dependencies]
spark = []
test = [
  "pytest>=7.0",
  "pyspark>=3.4",
]

[project.scripts]
dc43 = "dc43.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
]
